# Endianness.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  setup.cfg
.github/: .templateMarker
Endianness/: __init__.py  __main__.py
tests/: tests.py
