[metadata]
name = Endianness
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/Endianness.py
description = A library to remap integers of a certain endianness into another endianness
long_description = file: ReadMe.md
keywords = integer, endianness, endian
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires = 
	rangeslicetools @ git+https://gitlab.com/KOLANICH/rangeslicetools.py.git
python_requires = >=3.4
zip_safe = True
packages = Endianness
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests

[options.extras_require]
CLI = plumbum @ git+https://github.com/tomerfiliba/plumbum.git
